<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_item_reference"
        android:icon="@drawable/ic_action_reference"
        android:title="@string/reference" />
    <item
        android:id="@+id/bottom_item_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search" />
    <item
        android:id="@+id/bottom_item_library"
        android:icon="@drawable/ic_action_library"
        android:title="@string/version" />
    <item
        android:id="@+id/bottom_item_star"
        android:icon="@drawable/ic_action_unstarred"
        android:title="@string/star" />
    <item
        android:id="@+id/bottom_item_forward"
        android:enabled="false"
        android:icon="@drawable/ic_action_forward"
        android:title="@string/forward" />
    <item
        android:id="@+id/bottom_item_extra"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/menu_more" />
</menu>
