<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_reference"
        android:actionLayout="@layout/reference_action_view"
        android:icon="@drawable/ic_action_reference"
        android:title="@string/reference"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_item_seach"
        android:actionLayout="@layout/search_action_view"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always|collapseActionView"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_item_library"
        android:actionLayout="@layout/version_action_view"
        android:icon="@drawable/ic_action_library"
        app:showAsAction="always|collapseActionView"
        android:title="@string/version"/>

    <item
        android:id="@+id/menu_item_star"
        android:icon="@drawable/ic_action_unstarred"
        app:showAsAction="ifRoom"
        android:title="@string/star"/>

    
    <!-- similmente al browser, torno indietro col tasto fisico -->
    <!--
         item android:id="@+id/menu_item_back"
        android:icon="@drawable/ic_action_back"
        android:title="@string/back"
        android:showAsAction="ifRoom"
        /
    -->

    <item
        android:id="@+id/menu_item_forward"
        android:enabled="false"
        android:icon="@drawable/ic_action_forward"
        app:showAsAction="ifRoom"
        android:title="@string/forward"/>
    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share"
        android:visible="false"/>
    <!--
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom" 
        /
    -->

    <item
        android:id="@+id/menu_item_highlighter"
        android:title="@string/highlighter"
        android:visible="true"/>
    <item
        android:id="@+id/menu_item_copy"
        android:title="@string/copy"
        android:visible="false"/>
    <!--
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="ifRoom"

    -->

    <!--
    <item
        android:id="@+id/menu_item_bookmarks"
        android:title="@string/bookmarks"/>
    <item
        android:id="@+id/menu_item_history"
        android:title="@string/history"/>
    -->
    <item
        android:id="@+id/menu_item_tts"
        android:actionLayout="@layout/tts_action_view"
        app:showAsAction="never|collapseActionView"
        android:title="@string/tts"/>

    <item
        android:id="@+id/menu_item_night_mode"
        android:title="@string/night_mode_on"
        android:visible="true"/>
    <item
        android:id="@+id/menu_item_zoom_in"
        android:title="@string/zoom_in"
        android:visible="false"/>
    <item
        android:id="@+id/menu_item_zoom_out"
        android:title="@string/zoom_out"
        android:visible="false"/>

    <item
        android:id="@+id/menu_item_panels"
        android:title="@string/fragments_management"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_panels"/>
    <item
        android:id="@+id/menu_item_library_management"
        android:title="@string/version_management"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_library"/>

    <!--item
        android:id="@+id/menu_item_settings"
        android:title="@string/preferences"/>
    <item
        android:id="@+id/menu_item_help"
        android:title="@string/help"/-->

</menu>